@@ -1,0 +1,8 @@
+#?ini charset="utf-8"?
+
+
+[ezgmlLocationFilter]
+ExtensionName=ezgmaplocation
+ClassName=ezgmlLocationFilter
+MethodName=createSqlParts
+FileName=classes/ezgmllocationfilter.php
